Closed Bug 446302 Opened 18 years ago Closed 18 years ago

missing parenthesis in jemalloc

Categories

(Core :: Memory Allocator, defect)

1.9.0 Branch
x86
OpenSolaris
defect
Not set
blocker

Tracking

()

RESOLVED FIXED

People

(Reporter: matt, Assigned: ginnchen+exoracle)

References

Details

(Keywords: fixed1.9.0.2, regression)

Attachments

(2 files)

User-Agent: Mozilla/5.0 (X11; U; Linux x86_64; en-US; rv:1.8.1.15) Gecko/20080708 Firefox/2.0.0.15 Build Identifier: Firefox 3 jemalloc.c:5778 # elif (defined(__GNU_C__) crashes the build process. Maybe a missing parenthesis? Reproducible: Always Steps to Reproduce: 1. 2. 3.
Version: unspecified → 3.0 Branch
Component: General → jemalloc
Product: Firefox → Core
QA Contact: general → jemalloc
Version: 3.0 Branch → unspecified
Assignee: nobody → ginn.chen
Severity: normal → blocker
Status: UNCONFIRMED → NEW
Depends on: 422055
Ever confirmed: true
Keywords: regression
This was fixed in changeset 663c51189e98 on 20 June 2008.
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Sorry for not providing much details: $>uname -a SunOS 5.11 snv_93 i86pc i386 i86pc Solaris $>less .mozconfig . $topsrcdir/browser/config/mozconfig # Options for client.mk. mk_add_options MOZ_BUILD_PROJECTS="xulrunner" mk_add_options MOZ_OBJDIR=@TOPSRCDIR@/../setup # Global options ac_add_options --enable-debug ac_add_options --disable-static ac_add_options --enable-logging ac_add_options --disable-libxul ac_cv_visibility_pragma=no # XULRunner options ac_add_app_options xulrunner --enable-application=xulrunner $> echo $CC /usr/sfw/bin/gcc $> echo $CXX /usr/sfw/bin/gcc $> echo $LDFLAGS -L/usr/sfw/lib -R/usr/sfw/lib Error Msg: gmake[5]: Entering directory `/export/home/matt/setup/xulrunner/memory/jemalloc' jemalloc.c /usr/sfw/bin/gcc -o jemalloc.o -c -DOSTYPE=\"SunOS5\" -DOSARCH=SunOS -I/export/home/matt/mozilla/memory/jemalloc -I. -I../../dist/include -I../../dist/include/jemalloc -I../../dist/include/nspr -I../../dist/sdk/include -fPIC -Wno-long-long -pedantic -fno-strict-aliasing -pthreads -pipe -DDEBUG -D_DEBUG -DDEBUG_matt -DTRACING -g -O2 -include ../../mozilla-config.h -DMOZILLA_CLIENT -Wp,-MD,.deps/jemalloc.pp /export/home/matt/mozilla/memory/jemalloc/jemalloc.c /export/home/matt/mozilla/memory/jemalloc/jemalloc.c:5778:28: missing ')' in expression Hope this helps, but you guys have already fixed it, thanks
Attachment #330526 - Attachment mime type: application/octet-stream → text/plain
this is *not* fixed in cvs.
OS: Other → OpenSolaris
Version: unspecified → 1.9.0 Branch
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Attached patch patchSplinter Review
Attachment #330697 - Flags: review?(jasone)
Attachment #330697 - Flags: review?(jasone) → review+
Attachment #330697 - Flags: approval1.9.0.2?
Comment on attachment 330697 [details] [diff] [review] patch Approved for 1.9.0.2. Please land in CVS. a=ss
Attachment #330697 - Flags: approval1.9.0.2? → approval1.9.0.2+
Checking in jemalloc.c; /cvsroot/mozilla/memory/jemalloc/jemalloc.c,v <-- jemalloc.c new revision: 1.15; previous revision: 1.14 done
Status: REOPENED → RESOLVED
Closed: 18 years ago18 years ago
Keywords: fixed1.9.0.2
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: