Bug 446302 missing parenthesis in jemalloc r=jasone a=samuel.sidler